# team-6

./: Cargo.toml  LICENSE
src/: main.rs
src/audio/: midi.rs  midi_struct.rs  mod.rs  note.rs  state.rs
src/midi/: mod.rs  types.rs
src/sound/: track.rs
src/ui/: message_box.rs  midi_instruments.rs  mod.rs
src/ui/frame/: attributes.rs  keyboard.rs  menu.rs  mod.rs  note_grid.rs  track_list.rs  transport.rs
