[package]
name = "team-6"
version = "0.1.0"
edition = "2024"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
egui = { version = "0.33.3", features = ["persistence"] }
egui_extras = "0.33.3"
eframe = { version = "0.33.3", features = ["persistence"] }
midly = "0.5"
rustysynth = "1.3"
cpal = "0.15"
rfd = "0.17.1"
